--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~10.1.0",
     "@ngrx/effects": "^10.0.0",
     "@ngrx/store": "^10.0.0",
+    "animate.css": "^4.1.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0",
