--- a/angular.json
+++ b/angular.json
@@ -130,5 +130,8 @@
       }
     }
   },
-  "defaultProject": "listing-books-app"
+  "defaultProject": "listing-books-app",
+  "cli": {
+    "analytics": "8262667c-0990-43a1-81ca-b168287b6cfd"
+  }
 }
